# content-validity-index-backend

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  Dockerfile.test  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  lint.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_domains_table.py  0002_expand_user_id_column.py  0003_add_dimensions_table.py  0003_expand_user_id_columns.py  0004_add_construct_fields_to_domains.py  0005_add_full_name_overridden_to_users.py  0006_add_expertise_areas_master_and_m2m.py  0007_add_background_color_to_domains.py
app/: __init__.py  config.py  database.py  main.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  activity_log.py  base.py  dimension.py  domain.py  expert_assignment.py  expertise_area.py  instrument.py  item.py  rating.py  user.py
app/repositories/: __init__.py  activity_log_repository.py  dimension_repository.py  domain_repository.py  expert_assignment_repository.py  expertise_area_repository.py  instrument_repository.py  item_repository.py  rating_repository.py  user_repository.py
app/routers/: __init__.py  activity_logs.py  auth.py  backup.py  expertise_areas.py  instruments.py  ratings.py  users.py
app/schemas/: __init__.py  activity_log.py  backup.py  common.py  cvi.py  dimension.py  domain.py  expert_assignment.py  expertise_area.py  instrument.py  item.py  (+2 more)
tests/: __init__.py  conftest.py
(+37 files in other folders)
